# lx

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scripts/: benchmark.py
src/lx/: clipboard.py  display.py  main.py  ollama_client.py  parser.py
tests/: test_clipboard.py  test_display.py  test_main.py  test_parser.py
