[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lx"
version = "0.1.0"
description = "Turn plain-English tasks into Linux commands using a local LLM."
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "pyperclip",
]

[project.scripts]
lx = "lx.main:main"

[tool.setuptools.packages.find]
where = ["src"]